# Akita-Supermodem

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
akita_supermodem/: __init__.py  common.py  receiver.py  sender.py
akita_supermodem/proto/: akita.proto
docs/: index.md  protocol.md  usage.md
examples/: receive_files.py  send_file.py
tests/: __init__.py  test_common.py  test_receiver.py  test_sender.py
